hphp/hack/test/pocket_universes/naming/pu_type_access.bad.php.exp
File "pu_type_access.bad.php", line 23, characters 60-61:
Invalid Pocket Universe invocation: type is unknown (Naming[2110])
File "pu_type_access.bad.php", line 30, characters 55-56:
Invalid Pocket Universe invocation: type is unknown (Naming[2110])
File "pu_type_access.bad.php", line 35, characters 59-60:
Invalid Pocket Universe invocation: type is unknown (Naming[2110])
